bk_ida/gobmkida/c2/do_find_defense
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_find_defense/src/engine/reading.c:3226:12: error: expected expression
*( _OWORD *)&libs.pos[v204] = *( _OWORD *)&new_kom_pos[v204]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_find_defense/src/engine/reading.c:3226:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&libs.pos[v204] = *( _OWORD *)&new_kom_pos[v204]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_find_defense/src/engine/reading.c:3226:42: error: expected expression
*( _OWORD *)&libs.pos[v204] = *( _OWORD *)&new_kom_pos[v204]; 
                                         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_find_defense/src/engine/reading.c:3226:34: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&libs.pos[v204] = *( _OWORD *)&new_kom_pos[v204]; 
                                 ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_find_defense/src/engine/reading.c:3227:12: error: expected expression
*( _OWORD *)&libs.score[v204] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_find_defense/src/engine/reading.c:3227:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&libs.score[v204] = 0LL; 
   ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_find_defense/src/obj/1/reading.o] Error 1
